fixed userdropdown on small breakpoint to be no larger than 33% so that text truncation works

--- a/ui/reuse/client/src/components/topNav/supportingComponents/userDropDown.scss
+++ b/ui/reuse/client/src/components/topNav/supportingComponents/userDropDown.scss
@@ -80,3 +80,9 @@
 
     }
 }
+
+.withUserDropdown {
+    @include small-breakpoint {
+        max-width: 33%;
+    }
+}
